test/nginx-external-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external-auth
spec:
  selector:
    app: nginx-external-auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
